<resources>
    <string name="app_name">Calculator</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_0">0</string>
    <string name="PLUS">+</string>
    <string name="MINUS">-</string>
    <string name="x">X</string>
    <string name="u00f7">÷</string>
    <string name="EQ">=</string>
    <string name="sin">SIN</string>
    <string name="cos">COS</string>
    <string name="tan">TAN</string>
    <string name="u221a">√</string>
    <string name="x_2">X^2</string>
    <string name="x_1">X^-1</string>
</resources>
