<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.user.calculator.MainActivity">

    <EditText
        android:id="@+id/text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:hint="0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_input"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/btn_9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".34"
                android:text="@string/_9" />

            <Button
                android:id="@+id/btn_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".33"
                android:text="@string/_8" />

            <Button
                android:id="@+id/btn_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".33"
                android:text="@string/_7" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/btn_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".34"
                android:text="@string/_6" />

            <Button
                android:id="@+id/btn_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".33"
                android:text="@string/_5" />

            <Button
                android:id="@+id/btn_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".33"
                android:text="@string/_4" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/btn_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".34"
                android:text="@string/_3" />

            <Button
                android:id="@+id/btn_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".33"
                android:text="@string/_2" />

            <Button
                android:id="@+id/btn_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".33"
                android:text="@string/_1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/btn_0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".34"
                android:text="@string/_0" />

            <Button
                android:id="@+id/btn_pls"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".33"
                android:text="@string/PLUS" />

            <Button
                android:id="@+id/btn_min"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".33"
                android:text="@string/MINUS" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/btn_mult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".34"
                android:text="@string/x" />

            <Button
                android:id="@+id/btn_div"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".33"
                android:text="@string/u00f7" />

            <Button
                android:id="@+id/btn_eq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".33"
                android:text="@string/EQ" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/btn_sin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".34"
                android:text="@string/sin" />

            <Button
                android:id="@+id/btn_cos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".33"
                android:text="@string/cos" />

            <Button
                android:id="@+id/btn_tan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".33"
                android:text="@string/tan" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/btn_root_over"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".34"
                android:text="@string/u221a" />

            <Button
                android:id="@+id/btn_sq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".33"
                android:text="@string/x_2" />

            <Button
                android:id="@+id/btn_inv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".33"
                android:text="@string/x_1" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
